fixed color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -253,7 +253,7 @@
   display: grid;
   
   
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   
   
   height: auto; /* Changed to auto for better scaling */
@@ -323,20 +323,13 @@
   
   
   figcaption {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    color: var(--accent1-color);
   
-  
-  font-family: 'Bebas Neue', sans-serif;
-  
-  
-  font-size: 1.2rem;
-  
-  
-  margin-top: 10px;
-  
-  
-  color: var(--accent2-color);
-  
-  
+    /* Add a dark text shadow */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Adjust values as needed */
   }
   
   
@@ -346,7 +339,7 @@
   
   
   text-align: center;
-  
+
   
   }
   
